--- a/fundooApp/templates/popupnote.html
+++ b/fundooApp/templates/popupnote.html
@@ -2,7 +2,8 @@
 <md-dialog  style="width: 600px;height: 182px;">
 
      <img  ng-src="{{mydata.image}}" />
-    <div newcontenteditable contenteditable="true" style="margin-top: 10px" >{{mydata.title}} </div>
+     <div style="margin-left: 442px;margin-top: -27px;" ng-click="removeImage(mydata);"> <img src="images/baseline-delete-24px.svg"/></div>
+    <div newcontenteditable contenteditable="true" style="margin-top: 10px" ><strong>{{mydata.title}}</strong> </div>
     <md-icon><img src="images/pin0.svg" style="margin-top:-184px;margin-left: 219px;"/ >
     </md-icon>
 
@@ -10,7 +11,7 @@
     </div>
 <div class="dialog">  <icon></icon></div>
         <div >
-       <md-button  ng-click="cancel();updateNoteTitleDescripn()"class="popup">CLOSE</md-button>
+       <md-button  ng-click="cancel();updateNoteTitleDescripn(mydata)"class="popup">CLOSE</md-button>
      </div>
 </md-dialog>
 </div>
