--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -106,7 +106,17 @@ overflow: hidden;
 }
 .placesize{
     padding-left: 10px;
+}
+.dashOthr1{
+  padding-left: 10px;
+}
 
+.dashOthr2{
+  margin-top:16px;padding-left:10px
+}
+
+.paddingclas{
+  padding-left: 223px;padding-right: 255px;
 }
 .profile
 {
