--- a/fundooApp/templates/sidebar.html
+++ b/fundooApp/templates/sidebar.html
@@ -1,5 +1,5 @@
-<div layout="row" flex="20"  ng-init="getAllLabels()">
-  <md-sidenav class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4" style="margin-top:4.0em; z-index:1;" style="position:fixed;">
+<div layout="row" flex="20"  ng-init="getAllLabels()" md-disable-backdrop>
+  <md-sidenav class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4" style="margin-top:4.0em; z-index:1;position:fixed;">
     <md-button ng-click="toggleLeft()" class="md-accent"></md-button>
 
     <md-list-item style="margin-top:-36px;" ng-click="goToNote()">
