--- a/fundooApp/css/styl.css
+++ b/fundooApp/css/styl.css
@@ -184,12 +184,15 @@
     width: 100px;
     height: 100px;
     border-radius: 50px;
+
 }
 
 .profile-card
 {
     margin-left: -360px;
     width: 350px;
+    z-index: auto;
+    position: relative;
     /* background: #fff;
     border: 1px solid;
     border-color: rgba(0,0,0,.2);
@@ -256,10 +259,6 @@ md-chips .md-chips
     font-style: normal;
     text-decoration:none solid rgb(0, 0, 0);
     text-align:start;
-    color:#000000;
-    color:rgb(0, 0, 0);
-    background-color:#000000;
-    background-color:rgba(0, 0, 0, 0);
     font-size: 13px;
     font-family:Roboto, RobotoDraft, Arial, sans-serif;
 
@@ -273,13 +272,7 @@ md-chips .md-chips
     word-spacing:0px;
     font-weight:400;
     font-style: normal;
-    text-decoration:none solid rgb(102, 102, 102);
-    text-align:start;
-    color: #666666;
-    color:rgb(102, 102, 102);
-    background-color:#000000;
-    background-color:rgba(0, 0, 0, 0);
-    font-size: 13px;
+      font-size: 13px;
     font-family:Roboto, RobotoDraft, Arial, sans-serif;
 
 }
