--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -7,6 +7,26 @@ label{
   box-sizing: border-box;
   font-size: 14px;
 }
+
+.cropArea {
+  background: #E4E4E4;
+  overflow: hidden;
+  width:500px;
+  height:350px;
+}
+.gb{
+background: transparent;
+    border: none;
+    font: normal 16px Roboto,sans-serif;
+    -webkit-font-variant-ligatures: none;
+    font-variant-ligatures: none;
+    height: 46px;
+    outline: none;
+    padding: 11px 16px 11px 16px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .tit1{
 padding-left: 10;
 }
