--- a/fundooApp/templates/profileDialog.html
+++ b/fundooApp/templates/profileDialog.html
@@ -3,5 +3,14 @@
 
   <strong><label >Select Profile Photo</label></strong>
 
-<div layout="row" layout-align="center center" style="padding-top: 163px;">  <input type="file" style="border:1px solid red;"  ng-click="profilePic($event)"></div>
+<!-- <div layout="row" layout-align="center center" style="padding-top: 163px;">  <input type="file" style="border:1px solid red;"  ng-click="profilePic($event)"></div> -->
+<div>Select an image file: <input type="file" id="fileInput" /></div>
+<div class="cropArea">
+  <img-crop image="myImage" result-image="myCroppedImage"></img-crop>
+</div>
+<div>Cropped Image:</div>
+<div><img ng-src="{{myCroppedImage}}" /></div>
+      <md-button ng-click="handleFileSelect($event);" >Save</md-button></div>
+
+
 </md-dialog>
