commit changes from label dialog to panel

--- a/fundooApp/templates/navbar.html
+++ b/fundooApp/templates/navbar.html
@@ -40,7 +40,7 @@
    </md-button>
 
 <div ng-click="showProfileCard();">
-   <img src="{{userInfo.profilepicImage}}" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>userInfo.emailId</md-tooltip>
+   <img src="{{userInfo.profilepicImage}}" style="width:30px;height:28px; border-radius: 76px;"/><md-tooltip>{{userInfo.emailId}}</md-tooltip>
 </div>
   </md-toolbar>
 </div>
