--- a/fundooApp/templates/icon.html
+++ b/fundooApp/templates/icon.html
@@ -85,10 +85,9 @@
     </span>
         <md-menu-content>
           <md-menu-item><md-button ng-click="isTrash(note)">Delete note</md-button></md-menu-item>
-          <md-menu-item><md-button ng-click="showlabelDialog($event,note)">Add Label</md-button>
+          <md-menu-item><md-button ng-click="showlabelDialog($event,note)">change Label</md-button>
           </md-menu-item>
         </md-menu-content>
-
       </md-menu>
 
 
